# AtlasPhys

./: .gitignore  CMakeLists.txt  ERRORS.txt  GluePart.py  Handler.py  OpenGLWidget.py  OptionsUI.py  README.md  VisualPart.py  log.md  mypy.ini  pyproject.toml  test.py
ShaderProgram/: fragment_shader.frag  vertex_shader.vert
include/: Application.h  Application.hpp  Camera.hpp  FrameBuffer.hpp  G_Objects.hpp  ImguiLayer.h  ImguiLayer.hpp  OpenGLLayer.h  OpenGLLayer.hpp  SAT.hpp  Step.hpp
include/Math/: Constants.hpp  Matrix4.hpp  Quaternions.hpp  Utils.hpp  Vector3.hpp
prototype_python/: GluePart.py  Handler.py  OpenGLWidget.py  main.py  main.spec  profile.prof  pyproject.toml
prototype_python/ShaderProgram/: fragment_shader.frag  vertex_shader.vert
prototype_python/utils/: Contact.py  Decorator.py  GJK.py  G_Object.py  Generate_Objects.py  MathPhys_utils.py
src/: Application.cpp  FrameBuffer.cpp  G_Objects.cpp  ImguiLayer.cpp  OpenGLLayer.cpp  Utils.cpp  glad.c  main.cpp
src/ShaderProgram/: Shader.cpp  Shader.h  fragment_shader.frag  vertex_shader.vert
utils/: Contact.py  Decorator.py  EPA.py  GJK.py  G_Object.py  Generate_Objects.py  MathPhys_utils.py  Opengl_utils.py  Physics_utils.py  SimplexSolver.py  Sphere_utils.py  Step.py
