[project]
name = "wlyq-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nuitka>=2.8.9",
    "numba>=0.63.1",
    "numpy>=2.3.3",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pyqt6>=6.4.2",
    "pyqt6-tools>=6.4.2.3.3",
    "scipy>=1.17.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
